[package]
name = "patricia-trie"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie (Ethereum Style)"
license = "GPL-3.0"

[dependencies]
elastic-array = "0.10"
log = "0.3"
# rand = "0.4"
ethcore-bytes = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
ethereum-types = { version = "0.3", default-features = false, features = ["std", "serialize"] }
keccak-hash = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
hashdb = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
rlp = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
triehash = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
memorydb = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }

[dev-dependencies]
trie-standardmap = { git = "https://github.com/oasislabs/parity", branch = "ekiden-beta" }
