[package]
name = "run-contract"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
clap = "2.32.0"
either = "1.5.0"
ekiden-core = { git = "https://github.com/oasislabs/ekiden", branch = "armani/web3c1_keys" }
ekiden-roothash-base = { git = "https://github.com/oasislabs/ekiden", branch = "armani/web3c1_keys" }
ekiden-trusted = { git = "https://github.com/oasislabs/ekiden", branch = "armani/web3c1_keys" }
ethcore = { git = "https://github.com/oasislabs/parity", branch = "armani/web3c1_keys" }
ethereum-api = { path = "../../api" }
ethereum-types = { git = "https://github.com/oasislabs/primitives", branch = "ekiden" }
ethkey = { git = "https://github.com/oasislabs/parity", branch = "armani/web3c1_keys" }
lazy_static = "1.0.1"
log = "0.4.5"
rlp = { git = "https://github.com/oasislabs/parity", branch = "ekiden" }
runtime-ethereum = { path = "../../" }
simple_logger = "0.5.0"

[profile.release]
debug-assertions = true

[[bin]]
name = "run-contract"
path = "src/bin/main.rs"
