[package]
name = "readwrite"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
owasm-ethereum = "0.8"
owasm-abi = "0.1"
owasm-abi-derive = "0.1"
owasm-std = "0.13"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
incremental = false

[workspace]
members = []
