[package]
name = "rust-logistic"
version = "0.1.0"
authors = ["Oasis Labs<info@oasislabs.com>"]

[dependencies]
hex = "0.3"
rand = { version = "0.5" }
num = { git = "https://github.com/rust-num/num", version = "0.2" }
rulinalg = { git = "https://github.com/AtheMathmo/rulinalg", version = "0.4.2" }
rusty-machine = { git = "https://github.com/AtheMathmo/rusty-machine", version = "0.5.4" }
dpmlrust = { git = "https://github.com/oasislabs/dpml-rs" }
ml-reader = { git = "https://github.com/oasislabs/ml-reader" }
rusty-libsvm = { git = "https://github.com/oasislabs/ml-reader" }
owasm-ethereum = "0.7"
owasm-abi = "0.1"
owasm-abi-derive = "0.1"
owasm-std = "0.13"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[package.metadata.oasis]
max-mem = 262144
