[package]
name = "rust-logistic-contract"
version = "0.1.0"
authors = ["Oasis Labs<info@oasislabs.com>"]

[dependencies]
hex = "0.3"
parity-hash = { version = "1.2.0", default-features = false }
pwasm-ethereum = { git = "https://github.com/oasislabs/pwasm-ethereum", branch = "ekiden" }
rand = { version = "0.5" }
num = { git = "https://github.com/rust-num/num", version = "0.2" }
rulinalg = { git = "https://github.com/AtheMathmo/rulinalg", version = "0.4.2" }
rusty-machine = { git = "https://github.com/AtheMathmo/rusty-machine", version = "0.5.4" }
dpmlrust = { git = "https://github.com/oasislabs/dpml-rs" }
pwasm-std = "0.10.0"
ml-reader = { git = "https://github.com/oasislabs/ml-reader" }
rusty-libsvm = { git = "https://github.com/oasislabs/ml-reader" }

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
