[package]
name = "storage-contract"
version = "0.1.0"
authors = ["Oasis Labs<info@oasislabs.com>"]

[dependencies]
hex = "0.3"
parity-hash = { version = "1.2.0", default-features = false }
pwasm-ethereum = { git = "https://github.com/oasislabs/pwasm-ethereum-private", branch = "ekiden" }

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
