[package]
name = "storage"
version = "0.1.0"
authors = ["Oasis Labs<info@oasislabs.com>"]

[dependencies]
hex = "0.3"
parity-hash = { version = "1.2.0", default-features = false }
owasm-ethereum = { git = "https://github.com/oasislabs/pwasm-ethereum-private", branch = "armani/rebase" }
owasm-abi = "0.1"
owasm-abi-derive = "0.1"
owasm-std = "0.13"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"

[package.metadata.oasis]
max-mem = 262144