[package]
name = "tvm_basic_contract"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
edition = "2018"

[dependencies]
ndarray = "0.11.2"
owasm-abi = "0.1"
owasm-abi-derive = "0.1"
owasm-ethereum = "0.7"
owasm-std = "0.13"
tvm = { git = "https://github.com/dmlc/tvm" }

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
